Fix too small html font to review by '--browser'
Only when 'converter' is prince or weasyprint.

--- a/tosixinch/data/css/sample.t.css
+++ b/tosixinch/data/css/sample.t.css
@@ -14,6 +14,15 @@ body {
     margin: 0;
 }
 
+/* to view Extracted Files in browser (only for prince and weasyprint */
+{% if prince_or_weasyprint %}
+@media screen {
+    body {
+        font-size: 16px;
+    }
+}
+{% endif %}
+
 /* http://pythonhosted.org/feedparser uses 'div.pre'. */
 /* some ebook publisher and calibre seem to create pre1 etc. in div and p */
 pre, code, kbd, samp, tt, div.pre, figcaption,
